// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Row component (SSR) > passes style and other props correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background-color:red;" class data-testid="row-test"><tbody style="width: 100%"><tr style="width: 100%"><!--[-->Test<!----><!--]--></tr></tbody></table><!--]-->
</html>"
`;

exports[`Row component (SSR) > renders children correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class><tbody style="width: 100%"><tr style="width: 100%"><!--[-->Test message<!----><!--]--></tr></tbody></table><!--]-->
</html>"
`;

exports[`Row component (SSR) > renders correctly with no children 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class><tbody style="width: 100%"><tr style="width: 100%"><!--[!--><!--]--></tr></tbody></table><!--]-->
</html>"
`;
